[build-system]
# scikit-build-core already bundles wheels for CMake & Ninja, so no need to list them.
requires = [
  "scikit-build-core>=0.11",
  "swig>=4.3"
]
build-backend = "scikit_build_core.build"


[project]
name            = "pc-tiling"                 # Use dashes, never underscores, on PyPI
version         = "0.1.2"                     # Or switch to dynamic = ["version"]
description     = "Fast point‑cloud tiling with PCL, exposed to Python via SWIG"
readme          = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [
  { name = "Zan Gojcic" },
  { name = "Nicholas Meyer", email = "meyernic@ethz.ch" }
]
# ‘maintainers’ is optional; use it only if different from authors
maintainers = [
  { name = "Nicholas Meyer", email = "meyernic@ethz.ch" }
]

keywords = ["point‑cloud", "tiling", "PCL", "SWIG", "C++"]

license = { file = "LICENSE" }

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "Operating System :: OS Independent"
]

# Run‑time Python deps only; C/C++ libs are handled by CMake
dependencies = [
  # "numpy>=2.0,<3",          # uncomment if you pass NumPy arrays
]

[project.urls]
Homepage       = "https://github.com/me/pc-tiling"
Documentation  = "https://readthedocs.org/projects/pc-tiling"
Repository     = "https://github.com/me/pc-tiling"
Issues         = "https://github.com/me/pc-tiling/issues"
Changelog      = "https://github.com/me/pc-tiling/blob/main/CHANGELOG.md"


# ───────── scikit‑build‑core options ──────────────────────────────
[tool.scikit-build]
cmake.source-dir = "."        # <- dotted name, not hyphen


